switched to cookies from jwt token